infra/podiumd-proxy-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podiumd-proxy
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: podiumd-proxy
  ports:
    - port: 80
      targetPort: 8080
